--- a/GastosEmpleados.web/Views/Employees/Create.cshtml
+++ b/GastosEmpleados.web/Views/Employees/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GastosEmpleados.web.Data.Entities.EmpleadoEntity
+﻿@model GastosEmpleados.web.Data.Entities.EmployeesEntity
 
 @{
     ViewData["Title"] = "Create";
@@ -6,16 +6,16 @@
 
 <h2>Create</h2>
 
-<h4>EmpleadoEntity</h4>
+<h4>Employees</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+                <label asp-for="Document" class="control-label"></label>
+                <input asp-for="Document" class="form-control" />
+                <span asp-validation-for="Document" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -28,6 +28,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
