--- a/GastosEmpleado.Prism/GastosEmpleado.Prism/App.xaml
+++ b/GastosEmpleado.Prism/GastosEmpleado.Prism/App.xaml
@@ -5,7 +5,13 @@
              x:Class="GastosEmpleado.Prism.App">
 	<Application.Resources>
 
-		<!-- Application resource dictionary -->
+        <ResourceDictionary>
 
-	</Application.Resources>
+            <!-- Parameters -->
+            <x:String x:Key="UrlAPI">https://GastosEmpleadosweb.azurewebsites.net/</x:String>
+
+        </ResourceDictionary>
+
+
+    </Application.Resources>
 </prism:PrismApplication>
