--- a/GastosEmpleados.web/Views/Employees/Create.cshtml
+++ b/GastosEmpleados.web/Views/Employees/Create.cshtml
@@ -12,13 +12,16 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
             <div class="form-group">
                 <label asp-for="Document" class="control-label"></label>
                 <input asp-for="Document" class="form-control" />
                 <span asp-validation-for="Document" class="text-danger"></span>
-            </div>                
+            </div>   
+            
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
+                <a asp-action="Index" class="btn btn-success">Back to List</a>
             </div>
         </form>
     </div>
