--- a/GastosEmpleados.web/Views/Shared/_Layout.cshtml
+++ b/GastosEmpleados.web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                     {
                         <li><a asp-area="" asp-controller="Employees" asp-action="Index">Employees</a></li>
+                        <li><a asp-area="" asp-controller="Account" asp-action="Index">Users</a></li>
                     }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
