Adding Styles, Adding Icon & Splash

--- a/GastosEmpleado.Prism/GastosEmpleado.Prism/Views/EmployeesHistoryPage.xaml
+++ b/GastosEmpleado.Prism/GastosEmpleado.Prism/Views/EmployeesHistoryPage.xaml
@@ -5,6 +5,7 @@
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="GastosEmpleado.Prism.Views.EmployeesHistoryPage"
+             BackgroundColor="{StaticResource ColorBackgroud}"
              Title="{Binding Title}">
 
          <AbsoluteLayout>
@@ -18,13 +19,9 @@
                    Placeholder="Enter Document..." 
                    Text="{Binding Document}"
                    VerticalOptions="Center"/>
-                <Button BackgroundColor="Navy"
-                    Command="{Binding CheckDocumentCommand}"
-                    CornerRadius="25"
-                    HeightRequest="50"
-                    Margin="10,0"
-                    Text="Check Document"
-                    TextColor="White"/>
+                <Button Command="{Binding CheckDocumentCommand}"
+                    Margin="15,0"
+                    Text="Check Document" />
             </StackLayout>
 
             <StackLayout Orientation="Horizontal">
@@ -86,9 +83,9 @@
         <busyindicator:SfBusyIndicator AnimationType="Globe" 
                                        AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
                 	                   AbsoluteLayout.LayoutFlags="All"
-                	                   BackgroundColor="Silver"
+                	                   BackgroundColor="{StaticResource ColorDanger}"
                 	                   HorizontalOptions="Center"
-                	                   TextColor="White"
+                	                   TextColor="{StaticResource ColorFontInverse}"
                 	                   IsVisible="{Binding IsRunning}"
                 	                   Title="Loading..."
                 	                   VerticalOptions="Center"
