--- a/GastosEmpleado.Prism/GastosEmpleado.Prism/Views/TripDetailPage.xaml
+++ b/GastosEmpleado.Prism/GastosEmpleado.Prism/Views/TripDetailPage.xaml
@@ -4,15 +4,15 @@
              xmlns:prism="http://prismlibrary.com"
              xmlns:busyindicator="clr-namespace:Syncfusion.SfBusyIndicator.XForms;assembly=Syncfusion.SfBusyIndicator.XForms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="GastosEmpleado.Prism.Views.EmployeesHistoryPage"
+             x:Class="GastosEmpleado.Prism.Views.TripDetailPage"
              BackgroundColor="{StaticResource ColorBackgroud}"
              Title="{Binding Title}">
 
-         <AbsoluteLayout>
-            <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
+    <AbsoluteLayout>
+        <StackLayout AbsoluteLayout.LayoutBounds="0,0,1,1"
                      AbsoluteLayout.LayoutFlags="All" 
                      Padding="5">
-             <StackLayout Orientation="Horizontal">
+            <StackLayout Orientation="Horizontal">
                 <Label Text="Document"
                    VerticalOptions="Center"/>
                 <Entry HorizontalOptions="FillAndExpand" 
@@ -52,7 +52,6 @@
                    FontAttributes="Bold"
                    Text="Remarks"/>
             </Grid>
-
             <CollectionView ItemsSource="{Binding Details}">
                 <CollectionView.ItemsLayout>
                     <GridItemsLayout Orientation="Vertical"/>
@@ -60,6 +59,7 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
+                            
                             <Grid.GestureRecognizers>
                                 <TapGestureRecognizer Command="{Binding SelectTripCommand}"/>
                             </Grid.GestureRecognizers>
@@ -84,7 +84,7 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
         </StackLayout>
-        <busyindicator:SfBusyIndicator AnimationType="Globe" 
+        <busyindicator:SfBusyIndicator AnimationType="Rectangle" 
                                        AbsoluteLayout.LayoutBounds=".5,.5,.5,.5"
                 	                   AbsoluteLayout.LayoutFlags="All"
                 	                   BackgroundColor="{StaticResource ColorDanger}"
@@ -97,5 +97,5 @@
                 	                   ViewBoxHeight="80" />
 
     </AbsoluteLayout>
-    
+
 </ContentPage>
